main page chanage56465456

--- a/angular-ui/src/app/component/login/login.component.html
+++ b/angular-ui/src/app/component/login/login.component.html
@@ -27,7 +27,7 @@
                 
                 <div class="form-outline mb-4">
                   <p style="color:red;" *ngIf="userExist">User does not exist</p>
-                  <label class="form-label" for="form3Example3"> shakir bhosdika</label>
+                  <label class="form-label" for="form3Example3"> madarchod cicd work kar raha hai</label>
   
                   <br>
                   <p *ngIf="usernameReqired" style="color: red;">Username required</p>
